# ProjectOffline

./: .gitattributes  .gitignore  README.md  SConstruct  cli.bat  cli.txt  email_configs.install.json  pyproject.toml  requirements.txt
.github/: BRANCHING_STRATEGY.md  BRANCH_PROTECTION_SETUP.md  CI_CD_SETUP.md  CODEOWNERS  DEV_TO_FEATURE_BRANCH_SYNC.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/prompts/: init.prompt.md
.github/workflows/: branch_name_check.yml  hotfix_sync_to_develop.yml  merge_develop_to_main.yml  release.yml  tests.yml
documentation/: README.md  architecture.md
documentation/integrations/: ad_integration.md  confluence_calendar_integration.md  email_integration.md  jira_integration.md  jira_sync.md  keepass_integration.md  secondary_calendar_integration.md  version_control_integration.md
documentation/modules/: app_debug.md  app_tabs.md  baseline_manager.md  dialogs.md  export_gantt.md  file_handler.md  history_manager.md  holidays.md  hour_mode.md  icons.md  import_plantuml.md  logic.md  main.md  menu.md  progress_worker.md  ribbon.md  settings_dialogs.md  settings_manager.md  stylesheet.md  toolbar.md  ui.md
documentation/presentation/: index.html
documentation/requirements/: README.md  requirement_additional_informations.ixml  requirement_collection.rxml
documentation/tests/: README.md
documentation/user_documentation/: 01_getting_started.html  02_task_creation.html  03_gantt_chart.html  04_dependencies.html  05_resource_creation.html  06_team_planner.html  07_resource_usage.html  08_baseline.html  09_calendar_sync.html  10_file_operations.html  11_timeline.html  12_task_splitting.html  13_keepass.html  14_ad_integration.html  15_email_integration.html  16_jira_integration.html  17_jira_sync.html  18_calendar_management.html  19_version_control.html  20_resource_usage_histogram.html  21_progress_dialogs.html  22_critical_path_method.html  index.html  style.css
documentation/views/: baseline_view.md  dependency_view.md  gantt_view.md  resource_usage_graph_view.md  (+6 more)
email_templates/: README.txt  cpm_report.json  email_test.json  milestone_update.json  personal_schedule.json  resource_utilisation.json  schedule_overview.json  team_planner_snapshot.json
installer/: setup.iss.template
src/: _version.py  app_debug.py  app_tabs.py  baseline_manager.py  dialogs.py  export_gantt.py  file_handler.py  history_manager.py  holidays.py  icons.py  import_plantuml.py  logic.py  main.py  menu.py  progress_worker.py  ribbon.py  settings_dialogs.py  settings_manager.py  stylesheet.py  toolbar.py  ui.py
tools/: build_docs_pdf.py  copy_tortoisesvn_bin.py  download_git_for_windows.py  download_innosetup.py  download_openjdk.py  generate_dsf_requirements.py  generate_dsi_elements.py  generate_rxml_requirements.py  playwright_review_html.py  pyi_rthook_jdk.py  regenerate_requirements.py  test_cpm_actions.py  test_jira_actions.py  validate_dsf.py
(+177 files in other folders)
